# PSP

./: CMakeLists.txt  README.md
include/mips/: index_mips.h
include/ssg/: distance.h  index.h  index_random.h  index_ssg.h  neighbor.h  parameters.h  util.h
python/: dataloader.py  main.py
scripts/: run.sh
src/: CMakeLists.txt  index.cpp  index_mips.cpp  index_random.cpp  util.cpp
test/: CMakeLists.txt  test_mips_index.cpp  test_mips_search.cpp
